css/custom-style.css
/* ... */
.section-community-glyphicons {
  color: #FFF;
  padding-bottom: 20px;
}
.section-community-glyphicon1 {
  position: relative;
  left: 25px;
  font-size: 5em;
}
.section-community-glyphicon2 {
  position: relative;
  font-size: 8em;
}
.section-community-glyphicon3 {
  position: relative;
  right: 25px;
  font-size: 5em;
}
@media (max-width: 768px) {
  .section-community-heading {
    font-size: 3em;
  }
  .section-community-caption {
    font-size: 2em;
  }
}
@media (min-width: 768px) {
  .section-community-heading {
    font-size: 5em;
  }
  .section-community-caption {
    font-size: 3em;
  }
}

.link-list {
  margin-top: 75px;
  margin-bottom: 65px;
}
.link-list__row {
  padding: 8px;
  line-height: 1.4285;
  vertical-align: top;
  border-top: 1px solid #ddd;
}
.link-list__row:hover {
  background-color: #f5f5f5;
}
.link-list__title {
  font-size: 24px;
  margin: 3px 0;
  font-weight: 500;
  line-height: 1.1;
  padding-left: 15px;
  padding-right: 15px;
}
.link-list__description {
  line-height: 1.4285;
}
.link-list__link-btn-holder {
  text-align: center;
}

@-webkit-keyframes fadeIn {
  0% { opacity: 0; }
  100% { opacity: 1; }
}
@keyframes fadeIn {
  0% { opacity: 0; }
  100% { opacity: 1; }
}
.fadeIn {
  animation: fadeIn 2s;
  -webkit-animation: fadeIn 2s;
}

/******     END LANDING PAGE     ******/


/******     DIAGNOSTICS PAGE     *****/

.description {
	margin-left: 10%;
	font-size: 10pt;
	font-style: italic;
	width:70%;
	margin-right:20%;
	margin-bottom: 20pt;
}
#connectionStatus {
  position: absolute;
  right: 8px;
}
#connectionStatus.sticky {
    position: fixed;
    opacity: 0.5;
    top: 0px;
}
.status {
  font-size: 30px;
  margin-top: 20px;
  margin-bottom: 10px;
  font-weight: 500;
  line-height: 1.1;
  color: inherit;
  font-family: inherit;
}
.table-diagnostic {
  border-collapse: collapse;
}
.table-diagnostic td {
  padding: 3px;
  border: 1px solid #ddd;
}
.table-heading{
  word-wrap: break-word;
}
@-moz-document url-prefix() {
  fieldset { display: table-cell; }
} /* Firefox fix for fieldset bug */

/*****     END OF DIAGNOSTICS PAGE     *****/



/*****     VITALS APP PAGE     *****/
.vitals__status {
  min-height:57px;
}
/*****     END OF VITALS APP PAGE     *****/



/*****     USER DOCS STUFF     *****/

.doc-title {
  margin-top: 25px;
}

#docnav-affix.affix {
  top: 0;
}
#docnav-affix.affix-bottom {
  position: absolute;
}
.docnav-title {
  font-size: 1.75em;
  font-weight: 300;
}
.docnav a {
  text-decoration: none;
}
.docnav li {
  padding-bottom: 5px;
  transition-property: padding-left;
  transition-duration: 1s;
  transition-timing-function: ease-out;
  padding-left: 15px;
}
.docnav li:hover {
  transition-property: padding-left;
  transition-duration: 0.25s;
  transition-timing-function: ease-out;
  padding-left: 0;
}
.docnav li:hover a {
  transition-property: color;
  transition-duration: 0.25s;
  transition-timing-function: ease-out;
  padding-left: 0;
  color: #333;
}

.modal-xl {
  width: 90%;
}
.diagram-sm {
  height:350px;
  margin:5px auto;
}
.btn-system-modal{
  min-height: 115px;
}

/* bootstrap description list */
dt, dd {
  padding-top: 8px;
}

/***** END OF USER DOCS STUFF *****/

